@@ -2,6 +2,7 @@
 0.2.1 - 11.03.2009
   * Freehand tool set a pixel at the first click
   * Freehand tool is default after program start
+  * Koala uses .koa as default, .kla still works, of course
 
 0.2.0 - 11.03.2009
   * Display update re-implemented, much faster now
